Fixed font and spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,23 +2,35 @@
 
 body {
   font-family: Roboto, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   color: black;
   background: white;
 }
 
-h1, h2, h3, h4, h5, h6, button,
-.h1, .h2, .h3, .h4, .h5, .h6, .button {
-  text-transform: uppercase;
+.font-roboto {
+  font-family: Roboto, Arial, sans-serif;
+  font-weight: normal;
+}
+
+.font-montserrat {
+  font-family: Montserrat, Verdana, sans-serif;
+  font-weight: 200;
+}
+
+.font-weight-normal {
+  font-weight: normal;
+}
+
+.font-weight-bold {
+  font-weight: bold;
+}
+
+.font-weight-200 {
+  font-weight: 200;
+}
+
+.font-weight-500 {
   font-weight: 500;
-}
-
-.navbar {
-  padding: 0;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: white;
 }
 
 .text-green {
@@ -43,6 +55,21 @@ h1, h2, h3, h4, h5, h6, button,
 
 .bg-dark-purple {
   background-color: #591F5F;
+}
+
+h1, h2, h3, h4, h5, h6, button,
+.h1, .h2, .h3, .h4, .h5, .h6, .button {
+  text-transform: uppercase;
+  font-family: Montserrat, Verdana, sans-serif;
+  font-weight: 500;
+}
+
+.navbar {
+  padding: 0;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: white;
 }
 
 .btn {
@@ -143,12 +170,7 @@ h1, h2, h3, h4, h5, h6, button,
   padding-top: 3rem;
   margin-bottom: 10rem;
 
-  h3 {
-    @extend .text-dark-purple;
-    margin-bottom: 3rem;
-  }
-
-  #press-carousel {
+  h3, #press-carousel {
     margin-bottom: 3rem;
   }
 
@@ -161,8 +183,27 @@ h1, h2, h3, h4, h5, h6, button,
       padding: 0.5rem;
       background: white;
       border-radius: $border-radius;
-      height: 350px;
+      height: 450px;
       overflow-y: auto;
+    }
+  }
+}
+
+#events {
+  background-image: url('../images/bg-events.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 800px;
+
+  margin-top: -6rem;
+  padding-top: 12rem;
+
+  a {
+    color: #666;
+
+    &:hover {
+      color: #666;
     }
   }
 }
